event and property update, datatable (#90)
* event update
* property update
* integration tests
* fix api, add datatable
