# metadata/src/events/types.rs
@@ -1,18 +1,12 @@
 use chrono::{DateTime, Utc};
 use serde::{Deserialize, Serialize};
+use crate::OptionalProperty;
 
 #[derive(Serialize, Deserialize, Clone, Debug, PartialEq)]
 #[serde(rename_all = "lowercase")]
 pub enum Status {
     Enabled,
     Disabled,
-}
-
-#[derive(Serialize, Deserialize, Clone, Debug, PartialEq)]
-#[serde(rename_all = "lowercase")]
-pub enum Scope {
-    System,
-    User,
 }
 
 #[derive(Serialize, Deserialize, Clone, Debug, PartialEq)]
@@ -28,7 +22,7 @@ pub struct Event {
     pub display_name: Option<String>,
     pub description: Option<String>,
     pub status: Status,
-    pub scope: Scope,
+    pub is_system: bool,
     pub properties: Option<Vec<u64>>,
     pub custom_properties: Option<Vec<u64>>,
 }
@@ -36,28 +30,25 @@ pub struct Event {
 #[derive(Serialize, Deserialize, Clone, Debug, PartialEq)]
 pub struct CreateEventRequest {
     pub created_by: u64,
-    pub project_id: u64,
     pub tags: Option<Vec<String>>,
     pub name: String,
     pub display_name: Option<String>,
     pub description: Option<String>,
     pub status: Status,
-    pub scope: Scope,
+    pub is_system: bool,
     pub properties: Option<Vec<u64>>,
     pub custom_properties: Option<Vec<u64>>,
 }
 
-#[derive(Serialize, Deserialize, Clone, Debug, PartialEq)]
+#[derive(Serialize, Deserialize, Clone, Debug, PartialEq,Default)]
 pub struct UpdateEventRequest {
-    pub id: u64,
     pub updated_by: u64,
-    pub project_id: u64,
-    pub tags: Option<Vec<String>>,
-    pub name: String,
-    pub display_name: Option<String>,
-    pub description: Option<String>,
-    pub status: Status,
-    pub scope: Scope,
-    pub properties: Option<Vec<u64>>,
-    pub custom_properties: Option<Vec<u64>>,
+    pub tags: OptionalProperty<Option<Vec<String>>>,
+    pub name: OptionalProperty<String>,
+    pub display_name: OptionalProperty<Option<String>>,
+    pub description: OptionalProperty<Option<String>>,
+    pub status: OptionalProperty<Status>,
+    pub is_system: OptionalProperty<bool>,
+    pub properties: OptionalProperty<Option<Vec<u64>>>,
+    pub custom_properties: OptionalProperty<Option<Vec<u64>>>,
 }
