# platform/src/events/types.rs
@@ -1,29 +1,22 @@
-use metadata::events::{Scope, Status};
+use metadata::events::{Status};
 use serde::{Deserialize, Serialize};
 
 #[derive(Serialize, Deserialize)]
-pub struct CreateRequest {
-    pub project_id: u64,
+#[serde(rename_all = "camelCase")]
+pub struct CreateEventRequest {
     pub tags: Option<Vec<String>>,
     pub name: String,
     pub display_name: Option<String>,
     pub description: Option<String>,
     pub status: Status,
-    pub scope: Scope,
-    pub properties: Option<Vec<u64>>,
-    pub custom_properties: Option<Vec<u64>>,
+    pub is_system: bool,
 }
 
 #[derive(Serialize, Deserialize)]
-pub struct UpdateRequest {
-    pub id: u64,
-    pub project_id: u64,
+#[serde(rename_all = "camelCase")]
+pub struct UpdateEventRequest {
     pub tags: Option<Vec<String>>,
-    pub name: String,
     pub display_name: Option<String>,
     pub description: Option<String>,
     pub status: Status,
-    pub scope: Scope,
-    pub properties: Option<Vec<u64>>,
-    pub custom_properties: Option<Vec<u64>>,
 }
