# platform/src/http/events.rs
@@ -1,5 +1,5 @@
 use crate::error::{Error, InternalError};
-use crate::events::{CreateRequest, Provider, UpdateRequest};
+use crate::events::{CreateEventRequest, Provider, UpdateEventRequest};
 use crate::{Context, events, EventsProvider, Result};
 use axum::extract::Path;
 use axum::http::StatusCode;
@@ -11,83 +11,64 @@ use std::sync::Arc;
 async fn create(
     ctx: Context,
     Extension(provider): Extension<Arc<EventsProvider>>,
-    Path(project_id): Path<u64>,
-    Json(request): Json<CreateRequest>,
+    Path((organization_id, project_id)): Path<(u64, u64)>,
+    Json(request): Json<CreateEventRequest>,
 ) -> Result<Json<Event>> {
-    if request.project_id != project_id {
-        return Err(Error::Internal2(InternalError::new(
-            "wrong project id",
-            StatusCode::BAD_REQUEST,
-        )));
-    }
-
-    Ok(Json(provider.create(ctx, request).await?))
+    Ok(Json(provider.create(ctx, organization_id, project_id, request).await?))
 }
 
 async fn get_by_id(
     ctx: Context,
     Extension(provider): Extension<Arc<EventsProvider>>,
-    Path((project_id, event_id)): Path<(u64, u64)>,
+    Path((organization_id, project_id, event_id)): Path<(u64, u64, u64)>,
 ) -> Result<Json<Event>> {
-    Ok(Json(provider.get_by_id(ctx, project_id, event_id).await?))
+    Ok(Json(provider.get_by_id(ctx, organization_id, project_id, event_id).await?))
 }
 
 async fn get_by_name(
     ctx: Context,
     Extension(provider): Extension<Arc<EventsProvider>>,
-    Path((project_id, event_name)): Path<(u64, String)>,
+    Path((organization_id, project_id)): Path<(u64, u64)>,
+    Path(event_name): Path<String>,
 ) -> Result<Json<Event>> {
     Ok(Json(
-        provider.get_by_name(ctx, project_id, &event_name).await?,
+        provider.get_by_name(ctx, organization_id, project_id, &event_name).await?,
     ))
 }
 
 async fn list(
     ctx: Context,
     Extension(provider): Extension<Arc<EventsProvider>>,
-    Path(project_id): Path<u64>,
+    Path((organization_id, project_id)): Path<(u64, u64)>,
 ) -> Result<Json<ListResponse<Event>>> {
-    Ok(Json(provider.list(ctx, project_id).await?))
+    Ok(Json(provider.list(ctx, organization_id, project_id).await?))
 }
 
 async fn update(
     ctx: Context,
     Extension(provider): Extension<Arc<EventsProvider>>,
-    Path((project_id, event_id)): Path<(u64, u64)>,
-    Json(request): Json<UpdateRequest>,
+    Path((organization_id, project_id, event_id)): Path<(u64, u64, u64)>,
+    Json(request): Json<UpdateEventRequest>,
 ) -> Result<Json<Event>> {
-    if request.project_id != project_id {
-        return Err(Error::Internal2(InternalError::new(
-            "code",
-            StatusCode::BAD_REQUEST,
-        )));
-    }
-    if request.id != event_id {
-        return Err(Error::Internal2(InternalError::new(
-            "code",
-            StatusCode::BAD_REQUEST,
-        )));
-    }
-
-    Ok(Json(provider.update(ctx, request).await?))
+    Ok(Json(provider.update(ctx, organization_id, project_id, event_id, request).await?))
 }
 
 async fn delete(
     ctx: Context,
     Extension(provider): Extension<Arc<EventsProvider>>,
-    Path((project_id, event_id)): Path<(u64, u64)>,
+    Path((organization_id, project_id, event_id)): Path<(u64, u64, u64)>,
 ) -> Result<Json<Event>> {
-    Ok(Json(provider.delete(ctx, project_id, event_id).await?))
+    Ok(Json(provider.delete(ctx, organization_id, project_id, event_id).await?))
 }
 
 async fn attach_property(
     ctx: Context,
     Extension(provider): Extension<Arc<EventsProvider>>,
-    Path((project_id, event_id, prop_id)): Path<(u64, u64, u64)>,
+    Path((organization_id, project_id, event_id, prop_id)): Path<(u64, u64, u64, u64)>,
 ) -> Result<Json<Event>> {
     Ok(Json(
         provider
-            .attach_property(ctx, project_id, event_id, prop_id)
+            .attach_property(ctx, organization_id, project_id, event_id, prop_id)
             .await?,
     ))
 }
@@ -95,11 +76,11 @@ async fn attach_property(
 async fn detach_property(
     ctx: Context,
     Extension(provider): Extension<Arc<EventsProvider>>,
-    Path((project_id, event_id, prop_id)): Path<(u64, u64, u64)>,
+    Path((organization_id, project_id, event_id, prop_id)): Path<(u64, u64, u64, u64)>,
 ) -> Result<Json<Event>> {
     Ok(Json(
         provider
-            .detach_property(ctx, project_id, event_id, prop_id)
+            .detach_property(ctx, organization_id, project_id, event_id, prop_id)
             .await?,
     ))
 }
@@ -107,23 +88,23 @@ async fn detach_property(
 pub fn attach_routes(router: Router, events: Arc<EventsProvider>) -> Router {
     router
         .route(
-            "/v1/projects/:project_id/events",
+            "/v1/organizations/:organization_id/projects/:project_id/schema/events",
             routing::post(create).get(list),
         )
         .route(
-            "/v1/projects/:project_id/events/:event_id",
+            "/v1/organizations/:organization_id/projects/:project_id/schema/events/:event_id",
             routing::get(get_by_id).delete(delete).put(update),
         )
         .route(
-            "/v1/projects/:project_id/events/name/:event_name",
+            "/v1/organizations/:organization_id/projects/:project_id/schema/events/name/:event_name",
             routing::get(get_by_name),
         )
         .route(
-            "/v1/projects/:project_id/events/:event_id/properties/:property_id",
+            "/v1/organizations/:organization_id/projects/:project_id/schema/events/:event_id/properties/:property_id",
             routing::post(attach_property),
         )
         .route(
-            "/v1/projects/:project_id/events/:event_id/properties/:property_id",
+            "/v1/organizations/:organization_id/projects/:project_id/schema/events/:event_id/properties/:property_id",
             routing::delete(detach_property),
         )
         .layer(AddExtensionLayer::new(events))
